# promtior-chat-assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.optimized  Makefile  README.md  docker-compose.dev.yml  docker-compose.full.yml  docker-compose.yml  pyproject.toml
.claude/skills/api-security-best-practices/: SKILL.md
.claude/skills/railway/_shared/scripts/: railway-common.sh
.claude/skills/railway/central-station/: SKILL.md
.claude/skills/railway/domain/: SKILL.md
.claude/skills/railway/environment/: SKILL.md
.claude/skills/railway/metrics/: SKILL.md
.claude/skills/railway/service/: SKILL.md
.claude/skills/railway/status/: SKILL.md
.claude/skills/railway/templates/: SKILL.md
.claude/skills/software-architecture/: SKILL.md
.claude/skills/test-fixing/: SKILL.md
docs/: API_CONFIGURATION.md  ARCHITECTURE.md  ARCHITECTURE_REFACTORING_PLAN.md  CLAUDE_SKILLS.md  CLEANUP_SUMMARY.md  DOCKER_IMPROVEMENTS.md  LOCAL_SETUP.md  PHASE2_FASTAPI_PRO_ADDITIONS.md  PYTHON_PRO_RECOMMENDATIONS.md  RAG_TROUBLESHOOTING.md  RAG_V2_IMPROVEMENTS.md  RAILWAY_DEPLOYMENT.md  REFACTORING_PRIORITIES.md  SECURITY.md  TECHNICAL_DOCUMENTATION.md  TESTING_EMBEDDING_METADATA.md  TROUBLESHOOTING.md
scripts/: diagnose_rag.py  test_metadata.sh
src/promtior_assistant/: __init__.py  config.py  ingest.py  main.py  rag.py
src/promtior_assistant/application/: __init__.py
src/promtior_assistant/application/use_cases/: __init__.py  answer_question.py
src/promtior_assistant/domain/: exceptions.py
src/promtior_assistant/domain/models/: __init__.py  embedding_metadata.py
src/promtior_assistant/domain/ports/: __init__.py  embeddings_port.py  llm_port.py  vector_store_port.py
src/promtior_assistant/domain/services/: validators.py
src/promtior_assistant/infrastructure/: container.py  factories.py
src/promtior_assistant/infrastructure/embeddings/: ollama_async_embeddings.py  ollama_embeddings.py
src/promtior_assistant/infrastructure/llm/: ollama_adapter.py  ollama_async_adapter.py  openai_async_adapter.py
src/promtior_assistant/infrastructure/persistence/: usage_tracker.py
src/promtior_assistant/infrastructure/vector_store/: chroma_adapter.py
src/promtior_assistant/presentation/: exceptions.py
src/promtior_assistant/presentation/api/dependencies/: __init__.py  auth.py
src/promtior_assistant/presentation/api/v1/: dependencies.py  routes.py
src/promtior_assistant/presentation/middleware/: logging.py  rate_limit.py  request_id.py  security_headers.py  timeout.py
src/promtior_assistant/presentation/schemas/: request.py  response.py
src/promtior_assistant/services/: rag_service.py
tests/: __init__.py  conftest.py  test_api.py  test_integration.py
tests/unit/: test_adapters.py  test_answer_question_use_case.py  test_chroma_adapter.py  test_config.py  test_container.py  test_dependencies.py  test_domain.py  test_embedding_metadata.py  test_exceptions.py  test_factories.py  test_rag_service.py  test_schemas.py  test_usage_tracker.py  test_validators.py
