[project]
name = "promtior-chat-assistant"
version = "0.1.0"
description = "RAG-based chatbot for Promtior using LangChain - MVP"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    # FastAPI básico
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    # LangChain minimal
    "langchain>=0.1.0",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.0.20",
    "langchain-openai>=0.0.5",
    "langchain-chroma>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-text-splitters>=0.0.1",
    "langchain-ollama>=1.0.1",
    # Vector DB
    "chromadb>=0.4.22",
    # Data models
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    # Scraping
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    # Utils
    "python-dotenv>=1.0.0",
    "pypdf>=6.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "bandit[toml]>=1.7.6",
    "types-requests>=2.31.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear (bugs comunes)
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade (syntax moderno)
    "S",      # flake8-bandit (security)
    "SIM",    # flake8-simplify
    "N",      # pep8-naming
    "RUF",    # Ruff-specific rules
]

ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__
    "D102",   # Missing docstring in public method
    "D103",   # Missing docstring in public function
    "D205",   # 1 blank line required between summary line
    "D212",   # Multi-line docstring summary should start at first line
    "D415",   # First line should end with a period
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
    "ANN201", # Missing return type annotation for public function
    "ANN204", # Missing return type annotation for __init__
    "ANN001", # Missing type annotation for argument
    "ANN003", # Missing type annotation for **kwargs
    "ANN206", # Missing return type annotation for classmethod
    "COM812", # Trailing comma missing
    "ISC001", # Single line implicit string concatenation
    "B008",   # Do not perform function calls in argument defaults
    "S104",   # Possible binding to all interfaces
    "T201",   # print found (legacy code)
    "ASYNC240", # Async functions should not use os.path methods
    "RUF010", # Use explicit conversion flag
    "RUF012", # Mutable default value
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # Use of assert
    "ANN",    # Type annotations in tests
    "B011",   # assert False
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: Integration tests that require Ollama running",
    "unit: Unit tests that don't require external dependencies",
]
addopts = [
    "--cov=src/promtior_assistant",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/venv/*",
    "*/ingest.py",  # Legacy code - to be replaced in refactoring
    "*/rag.py",     # Legacy code - to be replaced in refactoring
    "*/rag_service.py",  # Legacy code - using lru_cache (anti-pattern)
    "*/ollama_adapter.py",  # Legacy sync adapter - use async version
    "*/ollama_async_adapter.py",  # Complex async - tested indirectly
    "*/ollama_embeddings.py",  # Legacy embeddings - use async version
    "*/ollama_async_embeddings.py",  # Complex async - tested indirectly
    "*/domain/ports/embeddings_port.py",  # Protocol interface - no executable code
    "*/services/__init__.py",  # Package init - no executable code
    "*/presentation/api/v1/__init__.py",  # Package init - no executable code
    "*/main.py",  # Entry point - endpoints tested via API tests
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "\\.\\.\\.",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
no_implicit_optional = true
show_error_codes = true
show_error_context = true
pretty = true

[[tool.mypy.overrides]]
module = "langchain.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain_core.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain_chroma.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain_openai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain_ollama.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "chromadb.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bs4.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "chromadb.api.*"
ignore_missing_imports = true

[tool.bandit]
targets = ["src"]
exclude_dirs = ["tests", ".venv", ".pytest_cache"]
skips = []

[tool.bandit.assert_used]
skips = ["*/test_*.py"]
